--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "return-deep-diff": "^0.3.0",
-    "sqlite": "^3.0.0"
+    "sqlite": "^3.0.0",
+    "sqlite3": "^4.0.3"
   }
 }
